--- a/index.html
+++ b/index.html
@@ -2,6 +2,35 @@
 <html>
 <head>
 <title>D-Martinez Programs</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-image: url("pict.jpg");
+        text-align: center;
+        margin: 0;
+        padding: 30px;
+    }
+
+    h2 {
+        font-size: 32px;
+        color: #003366;
+    }
+
+    p {
+        font-size: 18px;
+        color: #003366;
+    }
+
+    button {
+        background-color: #FFFFFF;
+        border: frame;
+        padding: 12px 15px;
+        margin-bottom: 10px;
+        font-size: 12px;
+        cursor: pointer;
+    }
+
+</style>
 </head>
 <body>
 
@@ -9,23 +38,29 @@
 <p>This is an excersize in rewritting my c++ programs in javascript.</p>
 <p>Why? So that everyone can use it in a browser.</p>
 
-<h2>Add 2 numbers.</h2>
+<h3>Add 2 numbers.</h3>
 <input type="number" id="num1" placeholder="Enter the First number">
 <input type="number" id="num2" placeholder="Enter the second number">
 <button onclick="calculateSum()">Calculate Sum</button>
 <p>Result: <span id="result"></span></p>
 
-<h2>Multiply 2 numbers.</h2>
+<h3>Multiply 2 numbers.</h3>
 <input type="number" id="pnum1" placeholder="Enter the First number">
 <input type="number" id="pnum2" placeholder="Enter the second number">
 <button onclick="calculateProduct()">Calculate Product</button>
 <p>Result: <span id="presult"></span></p>
 
-<h2>Divide 2 numbers.</h2>
+<h3>Divide 2 numbers.</h3>
 <input type="number" id="dnum1" placeholder="Enter the First number">
 <input type="number" id="dnum2" placeholder="Enter the second number">
 <button onclick="Divide()">Divide</button>
 <p>Result: <span id="dresult"></span></p>
+
+<h3>Subtract 2 numbers.</h3>
+<input type="number" id="snum1" placeholder="Enter the First number">
+<input type="number" id="snum2" placeholder="Enter the second number">
+<button onclick="Subtract()">Subtract</button>
+<p>Result: <span id="sresult"></span></p>
 
 <script>
     function calculateSum() {
@@ -50,7 +85,7 @@ parseFloat(document.getElementById('pnum2').value);
 		document.getElementById('presult').textContent = product;
 	}
 	
-	function calculateProduct() {
+	function Divide() {
 	    let dnum1 =
 parseFloat(document.getElementById('dnum1').value);
         let dnum2 =
@@ -60,6 +95,18 @@ parseFloat(document.getElementById('dnum2').value);
 		
 		document.getElementById('dresult').textContent = divide;
 	}
+
+	function Subtract() {
+	    let snum1 =
+parseFloat(document.getElementById('snum1').value);
+        let snum2 =
+parseFloat(document.getElementById('snum2').value);
+
+        let subtract = snum1 - snum2;
+		
+		document.getElementById('sresult').textContent = subtract;
+	}
 	</script> 
 </body>
 </html>
+
