--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@ parseFloat(document.getElementById('rnum1').value);
         let rnum2 =
 parseFloat(document.getElementById('rnum2').value);
 
-        let Remainder = snum1 % snum2;
+        let Remainder = rnum1 % rnum2;
 		
 		document.getElementById('rresult').textContent = Remainder;
 	}
 	</script> 
 </body>
 </html>
+
 
 
