--- a/index.html
+++ b/index.html
@@ -124,8 +124,10 @@ parseFloat(document.getElementById('rnum2').value);
 		document.getElementById('rresult').textContent = Remainder;
 	}
 	</script> 
+	<a href="https://dmartinez-codes.github.io/html/resume.html">Back to home</a>
 </body>
 </html>
+
 
 
 
